--- a/test/fixtures/issues.yml
+++ b/test/fixtures/issues.yml
@@ -6,6 +6,8 @@
 #  created_at :datetime         not null
 #  updated_at :datetime         not null
 #  city       :string
+#  latitude   :float
+#  longitude  :float
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
